--- a/Kwetter/Kwetter.csproj
+++ b/Kwetter/Kwetter.csproj
@@ -54,6 +54,12 @@
       <HintPath>..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.7\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Microsoft.Owin, Version=3.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Owin.3.0.1\lib\net45\Microsoft.Owin.dll</HintPath>
+    </Reference>
+    <Reference Include="Owin, Version=1.0.0.0, Culture=neutral, PublicKeyToken=f0ebd12fd5e55cc5, processorArchitecture=MSIL">
+      <HintPath>..\packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
+    </Reference>
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -87,6 +93,7 @@
   <ItemGroup>
     <Compile Include="Data\Context\KwetterContext.cs" />
     <Compile Include="Data\Models\Gebruiker.cs" />
+    <Compile Include="Data\Service\Start.cs" />
     <Compile Include="Migrations\201801111844244_InitialCreate.cs" />
     <Compile Include="Migrations\201801111844244_InitialCreate.Designer.cs">
       <DependentUpon>201801111844244_InitialCreate.cs</DependentUpon>
