--- a/Kwetter/packages.config
+++ b/Kwetter/packages.config
@@ -3,4 +3,6 @@
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.7" targetFramework="net461" />
   <package id="Microsoft.Net.Compilers" version="2.1.0" targetFramework="net461" developmentDependency="true" />
+  <package id="Microsoft.Owin" version="3.0.1" targetFramework="net461" />
+  <package id="Owin" version="1.0" targetFramework="net461" />
 </packages>
