--- a/Kwetter/Kwetter.csproj
+++ b/Kwetter/Kwetter.csproj
@@ -95,6 +95,7 @@
     <Compile Include="Data\Dao\GebruikerDao.cs" />
     <Compile Include="Data\Dao\GebruikerDaoImpl.cs" />
     <Compile Include="Data\Models\Gebruiker.cs" />
+    <Compile Include="Data\Models\Tweet.cs" />
     <Compile Include="Data\Service\KwetterService.cs" />
     <Compile Include="Data\Service\Start.cs" />
     <Compile Include="Migrations\201801111844244_InitialCreate.cs" />
