--- a/Kwetter/Kwetter.csproj
+++ b/Kwetter/Kwetter.csproj
@@ -268,6 +268,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="App_Code\" />
     <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
